# Cinematch

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
migrations/2024-12-19-124036_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: database.rs  mod.rs  pool.rs  sert.rs  state.rs
src/config/database/: migration.rs  mod.rs  pool.rs
src/database/: mod.rs
src/database/user/: database.rs  mod.rs  model.rs
src/repository/auth/: mod.rs  model.rs  repository.rs
src/routes/: mod.rs  user_routes.rs
src/routes/auth/: login.rs  mod.rs  models.rs  registration.rs
src/routes/auth/tests/: login.rs  mod.rs  registration.rs
src/routes/models/: error.rs  mod.rs  response_parser.rs
src/service/: api_services.rs  auth.rs  auth_service.rs  mod.rs  user.rs  user_service.rs
src/tests/: mod.rs
