[package]
name = "cinematch"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix
actix-web = { version = "4", features = ["openssl"] }
actix-service = "2"
actix-http = "3"
actix-tls = "3"
# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
# common
dotenvy = "0.15.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
env_logger = "0.11.5"
log = "0.4.22"
openssl = { version = "0.10" }
